# bspf

./: .gitignore  LICENSE  bfpsm1d_neumann.py  pyproject.toml
examples/: 1d_burgers_eq_ dirichlet_bc.py  1d_differentiation.py  1d_heat_eq_neumann_bc.py  1d_integration.py  2d_burgers_eq.py  2d_heat_eq.py  2d_shallow_water_eq.py  chebyshev.py  differentiation_1d.py  integration_1d.py  test_diff_1d.py
examples/jcp2025/: bfpsm1d.py  bfpsm2d.py  chebyshev.py  chebyshev_integral.py  fig1.py  fig2.py  fig3.py  fig4.py  fig5_data.py  fig5_plot.py  fig6.py  fig7.py  padefd.py
examples/jcp2025/data/: eta_row100_slices.npz  tsunami_bfpsm_dctdst_201.npz
src/bspf/: __init__.py  basis.py  bspf1d.py  bspf2d.py  core.py  correction.py  derivative.py  endpoints.py  grid.py  knots.py
test/: test_basis.py  test_correction.py  test_endpoints.py  test_grid.py  test_grid1d.py  test_knots.py
